# HarrisLabPlotting

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  __main__.py  brain connectivity example.ipynb  brain_connectivity_vizuals.py  camera.py  combine.py  connectivity.py  environment.yml  loaders.py  mesh.py  modularity.py  pyproject.toml  requirements.txt  roi_coordinate_tools.py  roi_coordinates.py  utils.py
cli/: __init__.py  config_loader.py  console.py  main.py
cli/commands/: __init__.py  batch.py  combine.py  config.py  coords.py  modular.py  plot.py  utils.py
docs/: Makefile  conf.py  index.md
docs/_ext/: interactive_plot.py
docs/_static/: custom.css
docs/about/: citation.md  troubleshooting.md
docs/data_preparation/: connectivity_inputs.md  roi_coordinates.md
docs/gallery/: interactive_plots.md  notebooks.md
docs/getting_started/: concepts.md  installation.md  quickstart.md
docs/how_to/: color_nodes_by_module.md  combine_brainnet_files.md  customize_camera.md  label_specific_rois.md  threshold_a_matrix.md
docs/reference/: cli.md
docs/reference/api/: mesh.md  (+8 more)
docs/scripts/: rebuild_plot_htmls.py
docs/tutorials/: basic_plotting.md  batch_processing.md  cli_walkthrough.md  legends_and_multiview.md  modularity.md  node_role_deep_dive.md  pvalue_plotting.md  static_export.md
examples/: test_k9_pipeline.py
test_files/: CLI_TUTORIAL.md  bcp update to include node size vector test, edge width scaled to matrix, utils, etc.ipynb  brain_filled_2.mz3  brain_filled_2.ply  example_config.yaml  get test files.ipynb  mesh_test.py  node and edge test simple plot.ipynb  test_modules_28.csv  updating create brain connectivity plot.ipynb
test_files/node and edges/: total(1).edge
test_files/roi_cogs/: mapped_roi_coordinates_comma.csv
tutorial/: CLI_TUTORIAL.md  LEGEND_AND_MULTIVIEW_TUTORIAL.md  MESH_CREATION_GUIDE.md  PVALUE_PLOTTING_TUTORIAL.md  README.md  legend key and 3 view display test.ipynb
(+79 files in other folders)
